--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
         @media screen and (max-width: 1025px) {
             /* 481px以上に適用されるCSS（タブレット用） */
             .background_base{
-                background: url(sakasa.JPG) center / cover no-repeat;
+                background: url(img1_lrg.JPG) center / cover no-repeat;
             }
             .background_stack{
-                background: url(rabbit2.png) center / cover no-repeat;
+                background: url(rabbit_2023.png) center / cover no-repeat;
             }
         }
 
@@ -205,7 +205,7 @@
                 background: url(img1_lrg.JPG) center / cover no-repeat;
             }
             .background_stack{
-                background: url(rabbit.png) center / cover no-repeat;
+                background: url(rabbit_2023.png) center / cover no-repeat;
             }
         }
     </style>
