--- a/index.html
+++ b/index.html
@@ -218,9 +218,10 @@
             <img src="logo.png" ,="" whdth="80%">
             <div class="heading_title">KITおみくじ</div>
             <div>あけましておめでとうございます。</div>
-            <div>2023年もirodoriをよろしくお願いします。</div>
+            <div>2023年も企画部irodoriをよろしくお願いします。</div>
             <div>下のボタンからおみくじを引くことが出来ます。</div>
             <div>おみくじの結果は是非<span>Twitter</span>でシェアしてね！</div>
+            <div>※結果はスクショしてね</div>
         </div>
 
 
