--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         .button {
             background-color:#FF6F6F;
             border-radius:20px;
+            color: #05edbb;
             font-size:120%
             margin: 10px;
             padding: 10px;
@@ -233,13 +234,13 @@
                 <div id="unnsei" class="heading">末吉</div>
                 <div id="flaver" class="sub_heading">小さな問題を後回しにしないことが吉に転ずる</div>
                 <div class="vertical">    
-                    <div id="gakugyou">学業：才能が開花、勉強が分かるわかるぞぉ</div>
-                    <div id="rennai">恋愛：年上または年下、あるいは同い年が狙い目</div>
-                    <div id="usemono">失物：必死に探しても見つからない恐れあり</div>
-                    <div id="kinnunn">金運：大学生活を彩る団体に捧げよ</div>
-                    <div id="sinnkou">親交：愛し愛され良好</div>
-                    <div id="kennkou">健康：大変健康的に過ごせる</div>
-                    <div id="tanni">単位：取り難し　はいふれっくすは寝坊用ではない</div>
+                    <div id="gakugyou">学　業：才能が開花、勉強が分かるわかるぞぉ</div>
+                    <div id="rennai">恋　愛：年上または年下、あるいは同い年が狙い目</div>
+                    <div id="usemono">失　物：必死に探しても見つからない恐れあり</div>
+                    <div id="kinnunn">金　運：大学生活を彩る団体に捧げよ</div>
+                    <div id="sinnkou">親　交：愛し愛され良好</div>
+                    <div id="kennkou">健　康：大変健康的に過ごせる</div>
+                    <div id="tanni">単　位：取り難し　はいふれっくすは寝坊用ではない</div>
                     <div id="sns">SNS：ちょっとだけバズる</div>
                 </div>
             </div>
@@ -322,13 +323,13 @@
             selectFlaverText();
             flaver.innerHTML = flaverText;
 
-            gakugyou.innerHTML  = "学業："+selectOtherText(0);
-            rennai.innerHTML    = "恋愛："+selectOtherText(1);
-            usemono.innerHTML   = "失物："+selectOtherText(2);
-            kinnunn.innerHTML   = "金運："+selectOtherText(3);
-            sinnkou.innerHTML   = "親交："+selectOtherText(4);
-            kennkou.innerHTML   = "健康："+selectOtherText(5);
-            tanni.innerHTML     = "単位："+selectOtherText(6);
+            gakugyou.innerHTML  = "学　業："+selectOtherText(0);
+            rennai.innerHTML    = "恋　愛："+selectOtherText(1);
+            usemono.innerHTML   = "失　物："+selectOtherText(2);
+            kinnunn.innerHTML   = "金　運："+selectOtherText(3);
+            sinnkou.innerHTML   = "親　交："+selectOtherText(4);
+            kennkou.innerHTML   = "健　康："+selectOtherText(5);
+            tanni.innerHTML     = "単　位："+selectOtherText(6);
             sns.innerHTML       = "SNS："+selectOtherText(7);
         }
 
@@ -489,13 +490,13 @@
             selectFlaverText();
             flaver.innerHTML = flaverText;
 
-            gakugyou.innerHTML  = "学業："+selectOtherText(0);
-            rennai.innerHTML    = "恋愛："+selectOtherText(1);
-            usemono.innerHTML   = "失物："+selectOtherText(2);
-            kinnunn.innerHTML   = "金運："+selectOtherText(3);
-            sinnkou.innerHTML   = "親交："+selectOtherText(4);
-            kennkou.innerHTML   = "健康："+selectOtherText(5);
-            tanni.innerHTML     = "単位："+selectOtherText(6);
+            gakugyou.innerHTML  = "学　業："+selectOtherText(0);
+            rennai.innerHTML    = "恋　愛："+selectOtherText(1);
+            usemono.innerHTML   = "失　物："+selectOtherText(2);
+            kinnunn.innerHTML   = "金　運："+selectOtherText(3);
+            sinnkou.innerHTML   = "親　交："+selectOtherText(4);
+            kennkou.innerHTML   = "健　康："+selectOtherText(5);
+            tanni.innerHTML     = "単　位："+selectOtherText(6);
             sns.innerHTML       = "SNS："+selectOtherText(7);
             */
         }
