--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         .button {
             background-color:#FF6F6F;
             border-radius:20px;
-            color: #05edbb;
+            color:#edd605;
             font-size:120%
             margin: 10px;
             padding: 10px;
