--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <div class="heading_title">KITおみくじ</div>
             <div>あけましておめでとうございます。</div>
             <div>2023年も企画部irodoriをよろしくお願いします。</div>
-            <div>下のボタンからおみくじを引くことが出来ます。あああ</div>
+            <div>下のボタンからおみくじを引くことが出来ます。</div>
             <div>おみくじの結果は是非<span>Twitter</span>でシェアしてね！</div>
             <div>※結果はスクショしてね</div>
         </div>
