--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         .button {
             background-color:#FF6F6F;
             border-radius:20px;
-            color:#edd605;
-            font-size:120%
+            color:#ffffff;
+            font-size:130%
             margin: 10px;
             padding: 10px;
             border: 1px none #f7f7f7;
