--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <div id="sinnkou">親　交：愛し愛され良好</div>
                     <div id="kennkou">健　康：大変健康的に過ごせる</div>
                     <div id="tanni">単　位：取り難し　はいふれっくすは寝坊用ではない</div>
-                    <div id="sns">SNS：ちょっとだけバズる</div>
+                    <div id="sns">ＳＮＳ：ちょっとだけバズる</div>
                 </div>
             </div>
         </div>
@@ -330,7 +330,7 @@
             sinnkou.innerHTML   = "親　交："+selectOtherText(4);
             kennkou.innerHTML   = "健　康："+selectOtherText(5);
             tanni.innerHTML     = "単　位："+selectOtherText(6);
-            sns.innerHTML       = "SNS："+selectOtherText(7);
+            sns.innerHTML       = "ＳＮＳ："+selectOtherText(7);
         }
 
         const feedOut = ()=>{ //おみくじ結果を透明にする
@@ -497,7 +497,7 @@
             sinnkou.innerHTML   = "親　交："+selectOtherText(4);
             kennkou.innerHTML   = "健　康："+selectOtherText(5);
             tanni.innerHTML     = "単　位："+selectOtherText(6);
-            sns.innerHTML       = "SNS："+selectOtherText(7);
+            sns.innerHTML       = "ＳＮＳ："+selectOtherText(7);
             */
         }
 
