--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             }
 
             // オプションパラメータを設定
-            let hashtags = "KITおみくじ2023";
+            let hashtags = ["KITおみくじ2023", "KITUSGs"];
             let url = encodeURIComponent(location.href);  // location.hrefは今いるURL
 
             // URLを生成して遷移
