--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             /* display: none; */
             text-align: center;
         }
-        
+        /*
         div.tweet button {
             position: fixed;
             bottom:0;
@@ -154,7 +154,7 @@
             color: white;
             cursor: pointer;
             z-index:100;
-        }
+        }*/
         
         i.fa-twitter {
             font-size: 26px;
@@ -249,11 +249,11 @@
         <div id="buttons" class="feed under" style="z-index: 30;">            
             <input id="omikuji_btn" class="button" type="button" value="おみくじを引く">    
         </div>
-
+/*
         <div class="tweet" id="tweet">
             <button id="twitter-share-button"><i class="fab fa-twitter"></i></button>
             <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+        </div>*/
     </div>
 
     <script> 
