--- a/index.html
+++ b/index.html
@@ -250,10 +250,8 @@
             <input id="omikuji_btn" class="button" type="button" value="おみくじを引く">    
         </div>
 
-        <div class="tweet" id="tweet">
-            <button id="twitter-share-button"><i class="fab fa-twitter"></i></button>
-            <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+//twitterボタン2
+        
     </div>
 
     <script> 
