--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
             <div>あけましておめでとうございます。</div>
             <div>2023年も企画部irodoriをよろしくお願いします。</div>
             <div>下のボタンからおみくじを引くことが出来ます。</div>
-            <div>おみくじの結果はスクショして、是非<span>Twitter</span>で</div>
-            <div>#KITおみくじ2023 #KITUSGs を付けてシェアしてね！</div>
+            <div>おみくじの結果はスクショして、是非<span>Twitter</span>で#KITおみくじ2023 #KITUSGs を付けてシェアしてね！</div>
         </div>
 
 
